# eh-library

./: .gitignore  README.md
client/: bsconfig.json  graphql_schema.json  index.html  package-lock.json  package.json
client/src/: AddNewBookForm.re  App.re  Book.re  BookForm.re  Books.re  Client.re  EditShipperModal.re  Home.re  Index.re  MyProfile.re  NewBook.re  Route.re  Shipper.re
client/src/LandingPage/: LandingPage.re  LandingPage_Index.re
client/src/NewBooks/: NewBooks.re  NewBooks_BookTile.re
server/: .env  Cargo.toml  README.md  Rocket.toml
server/migrations/2019-06-29-115627_create_books/: up.sql
server/migrations/2019-07-23-104739_create_users/: up.sql
server/src/: app.rs  auth_repository.rs  book.rs  book_handler.rs  book_repository.rs  books.rs  db.rs  errors.rs  google_json_response.rs  graph_handler.rs  graph_schema.rs  main.rs  models.rs  schema.rs
server/src/books/: handler.rs  repository.rs
