[package]
name = "server"
version = "0.1.0"
authors = ["Minh Nguyen-Hue <minh.nh1989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "*"
r2d2-diesel = "*"
serde = "1.0.94"
serde_json = "1.0.39"
serde_derive = "1.0.94"
