[package]
name = "server"
version = "0.1.0"
authors = ["Minh Nguyen-Hue <minh.nh1989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
# r2d2 = "0.8.5"
serde = "1.0.94"
serde_json = "1.0.39"
serde_derive = "1.0.94"
futures = "0.1.28"
derive_more = "0.15.0"
