[package]
name = "server"
version = "0.1.0"
authors = ["Minh Nguyen-Hue <minh.nh1989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argonautica = "0.2.0"
actix = "0.8.3"
actix-web = "1.0.5"
actix-cors = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.9.0"
lazy_static = "1.3.0"
assert_matches = "1.3.0"
# r2d2 = "0.8.5"
serde = "1.0.94"
serde_json = "1.0.39"
serde_derive = "1.0.94"
futures = "0.1.28"
derive_more = "0.15.0"
env_logger = "0.6.2"
juniper = "0.13.0"
